# ImageQualityReference

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
Assets/Shaders/Compiled/: Blit.frag.dxil  FullscreenTriangle.vert.dxil
Assets/Shaders/Source/: Blit.frag.hlsl  FullscreenTriangle.vert.hlsl  RegisterSpaces.h
Source/: Blitter.cpp  DescriptorArray.cpp  DescriptorHeap.cpp  Interface.cpp  Main.cpp  Precompiled.cpp  Precompiled.h  RenderInputShaderToy.cpp  ResourceManager.cpp  ResourceRegistry.cpp  ScrollingBuffer.h  State.cpp  Util.cpp  Util.h
Source/Include/: Blitter.h  Common.h  DescriptorArray.h  DescriptorHeap.h  Interface.h  OverlayStyle.h  Precompiled.h  RenderInput.h  RenderInputShaderToy.h  ResourceManager.h  ResourceRegistry.h  SplashImageBytes.h  State.h  Util.h
